Fix overflowing text in dropdown & remove extra spacing- advanced search

--- a/src/stories/Blocks/advanced-search/advanced-search.scss
+++ b/src/stories/Blocks/advanced-search/advanced-search.scss
@@ -1,7 +1,7 @@
 .advanced-search {
   width: 100%;
   padding: 40px $s-md;
-  margin-bottom: 48px;
+
   background-color: $c-global-primary;
 
   @include breakpoint-m {
